Add scenarios single logic
