# api/controllers/scenarios_single.js
@@ -25,7 +25,9 @@ var util = require('util');
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-  hello: hello
+  oper_post: addSingleScenario,
+  oper_get: getSingleScenarioById,
+  oper_put: setSingleScenarioById
 };
 
 /*
@@ -34,11 +36,17 @@ module.exports = {
   Param 1: a handle to the request object
   Param 2: a handle to the response object
  */
-function hello(req, res) {
-  // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
-  var name = req.swagger.params.name.value || 'stranger';
-  var hello = util.format('Hello, %s!', name);
+function addSingleScenario(req, res) {
+  console.log('addSingleScenario');
+  res.json({ code: 0, message: 'addSingleScenario' });
+}
 
-  // this sends back a JSON response which is a single string
-  res.json(hello);
+function getSingleScenarioById(req, res) {
+  console.log('getSingleScenarioById');
+  res.json({ code: 1, message: 'getSingleScenarioById' });
+}
+
+function setSingleScenarioById(req, res) {
+  console.log('setSingleScenarioById');
+  res.json({ code: 2, message: 'setSingleScenarioById' });
 }
